HV-1882 Use a different JDK for running Maven than for compiling/launching tests in JDK CI jobs