@@ -239,6 +239,7 @@
         <version.sigtest.plugin>1.2</version.sigtest.plugin>
         <version.source.plugin>3.0.1</version.source.plugin>
         <version.surefire.plugin>2.21.0</version.surefire.plugin>
+        <version.surefire.plugin.java-version.asm>9.2</version.surefire.plugin.java-version.asm>
         <version.failsafe.plugin>${version.surefire.plugin}</version.failsafe.plugin>
         <version.wildfly.plugin>1.2.1.Final</version.wildfly.plugin>
         <version.org.wildfly.core>14.0.0.Final</version.org.wildfly.core>
@@ -268,21 +269,32 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+        <!-- The lowest supported version of Java for applications using Hibernate Validator -->
+        <!-- Set statically, independently of the current JDK: we want our code to comply with this version -->
+        <java-version.main.release>8</java-version.main.release>
+        <java-version.main.compiler.java_home>${java.home}</java-version.main.compiler.java_home>
+        <java-version.main.compiler>${java-version.main.compiler.java_home}/bin/javac</java-version.main.compiler>
+        <!-- The version of test bytecode, useful for testing compatibility with newer JDKs -->
+        <!-- Set to the version of the JDK running Maven by default, but overridden on CI -->
+        <!-- 'java.specification.version' is only correct from Java 9 onwards, but we require Java 17 to run the build anyway -->
+        <java-version.test.release>${java.specification.version}</java-version.test.release>
+        <java-version.test.compiler.java_home>${java.home}</java-version.test.compiler.java_home>
+        <java-version.test.compiler>${java-version.test.compiler.java_home}/bin/javac</java-version.test.compiler>
+        <!-- IMPORTANT: For Java 8, this must be the path to the JDK, not to the JRE -->
+        <java-version.test.launcher.java_home>${java-version.test.compiler.java_home}</java-version.test.launcher.java_home>
+        <java-version.test.launcher>${java-version.test.launcher.java_home}/bin/java</java-version.test.launcher>
+
         <!-- No need to build the javadocs per module. Aggregated javadocs are build in the distribution module. See also HV-894 -->
         <maven.javadoc.skip>true</maven.javadoc.skip>
 
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.testTarget>${maven.compiler.target}</maven.compiler.testTarget>
-        <maven.compiler.testSource>${maven.compiler.source}</maven.compiler.testSource>
-        <!--
-                Options to override the compiler arguments directly on the compiler argument line to separate between what
-                the IDE understands as the source level and what the Maven compiler actually use.
-        -->
-        <maven.compiler.argument.target>${maven.compiler.target}</maven.compiler.argument.target>
-        <maven.compiler.argument.source>${maven.compiler.source}</maven.compiler.argument.source>
-        <maven.compiler.argument.testTarget>${maven.compiler.testTarget}</maven.compiler.argument.testTarget>
-        <maven.compiler.argument.testSource>${maven.compiler.testSource}</maven.compiler.argument.testSource>
+        <maven.compiler.release>${java-version.main.release}</maven.compiler.release>
+        <maven.compiler.testRelease>${java-version.test.release}</maven.compiler.testRelease>
+
+        <!-- Also set source/target, because several other plugins rely on this and don't understand release -->
+        <maven.compiler.source>${java-version.main.release}</maven.compiler.source>
+        <maven.compiler.target>${java-version.main.release}</maven.compiler.target>
+        <maven.compiler.testSource>${java-version.test.release}</maven.compiler.testSource>
+        <maven.compiler.testTarget>${java-version.test.release}</maven.compiler.testTarget>
 
         <!-- Set empty default values to avoid Maven leaving property references (${...}) when it doesn't find a value -->
         <surefire.jvm.args.additional></surefire.jvm.args.additional>
@@ -307,12 +319,15 @@
          -->
         <surefire.environment>default</surefire.environment>
 
+        <arquillian.wildfly.jvm.java_home>${java-version.test.launcher.java_home}</arquillian.wildfly.jvm.java_home>
         <arquillian.wildfly.jvm.args.add-opens></arquillian.wildfly.jvm.args.add-opens>
         <arquillian.wildfly.jvm.args.add-modules></arquillian.wildfly.jvm.args.add-modules>
         <arquillian.wildfly.jvm.args>${arquillian.wildfly.jvm.args.add-opens} ${arquillian.wildfly.jvm.args.add-modules}</arquillian.wildfly.jvm.args>
 
+        <arquillian.payara.jvm.java_home>${java-version.test.launcher.java_home}</arquillian.payara.jvm.java_home>
+
         <!-- JDK version required for the build -->
-        <jdk.min.version>${maven.compiler.argument.source}</jdk.min.version>
+        <jdk.min.version>11</jdk.min.version>
         <maven.min.version>3.3.1</maven.min.version>
     </properties>
 
@@ -398,6 +413,11 @@
                 <groupId>org.javamoney</groupId>
                 <artifactId>moneta</artifactId>
                 <version>${version.org.javamoney.moneta}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-base</artifactId>
+                <version>${version.org.openjfx}</version>
             </dependency>
             <dependency>
                 <groupId>net.bytebuddy</groupId>
@@ -647,15 +667,27 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${version.compiler.plugin}</version>
                     <configuration>
-                        <source>${maven.compiler.argument.source}</source>
-                        <target>${maven.compiler.argument.target}</target>
-                        <testSource>${maven.compiler.argument.testSource}</testSource>
-                        <testTarget>${maven.compiler.argument.testTarget}</testTarget>
                         <compilerArgs>
                             <compilerArg>-Aorg.jboss.logging.tools.addGeneratedAnnotation=false</compilerArg>
                         </compilerArgs>
                         <testCompilerArgument>-parameters</testCompilerArgument>
                     </configuration>
+                    <executions>
+                        <execution>
+                            <id>default-compile</id>
+                            <configuration>
+                                <fork>true</fork>
+                                <executable>${java-version.main.compiler}</executable>
+                            </configuration>
+                        </execution>
+                        <execution>
+                            <id>default-testCompile</id>
+                            <configuration>
+                                <fork>true</fork>
+                                <executable>${java-version.test.compiler}</executable>
+                            </configuration>
+                        </execution>
+                    </executions>
                 </plugin>
                 <plugin>
                     <artifactId>maven-checkstyle-plugin</artifactId>
@@ -857,9 +889,23 @@
                         <includes>
                             <include>**/*Test.java</include>
                         </includes>
+                        <jvm>${java-version.test.launcher}</jvm>
                         <argLine>${surefire.jvm.args}</argLine>
                         <reportNameSuffix>${surefire.environment}</reportNameSuffix>
                     </configuration>
+                    <dependencies>
+                        <!--
+                             maven-surefire-plugin and maven-failsafe-plugin use an older version of ASM
+                             that cannot handle Java 15+ bytecode.
+                             Let's upgrade that dependency and hope for the best;
+                             if it doesn't work, the build is very likely to fail and we'll know about it.
+                         -->
+                        <dependency>
+                            <groupId>org.ow2.asm</groupId>
+                            <artifactId>asm</artifactId>
+                            <version>${version.surefire.plugin.java-version.asm}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-report-plugin</artifactId>
@@ -882,9 +928,23 @@
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>${version.failsafe.plugin}</version>
                     <configuration>
+                        <jvm>${java-version.test.launcher}</jvm>
                         <argLine>${failsafe.jvm.args}</argLine>
                         <reportNameSuffix>${surefire.environment}</reportNameSuffix>
                     </configuration>
+                    <dependencies>
+                        <!--
+                             maven-surefire-plugin and maven-failsafe-plugin use an older version of ASM
+                             that cannot handle Java 15+ bytecode.
+                             Let's upgrade that dependency and hope for the best;
+                             if it doesn't work, the build is very likely to fail and we'll know about it.
+                         -->
+                        <dependency>
+                            <groupId>org.ow2.asm</groupId>
+                            <artifactId>asm</artifactId>
+                            <version>${version.surefire.plugin.java-version.asm}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
                 <plugin>
                     <artifactId>maven-dependency-plugin</artifactId>
@@ -1326,13 +1386,56 @@
             </build>
         </profile>
         <profile>
-            <id>jdk9+</id>
+            <id>testWithJdk8</id>
             <activation>
-                <jdk>[9,)</jdk>
+                <property>
+                    <name>java-version.test.release</name>
+                    <value>8</value>
+                </property>
+            </activation>
+            <modules>
+                <!-- Only run the OSGi tests for JDK 8 -->
+                <module>osgi</module>
+            </modules>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <configuration>
+                                <classpathDependencyExcludes>
+                                    <!-- JavaFX is already provided by OracleJDK8 -->
+                                    <classpathDependencyExclude>org.openjfx:javafx-base</classpathDependencyExclude>
+                                </classpathDependencyExcludes>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-failsafe-plugin</artifactId>
+                            <configuration>
+                                <classpathDependencyExcludes>
+                                    <!-- JavaFX is already provided by OracleJDK8 -->
+                                    <classpathDependencyExclude>org.openjfx:javafx-base</classpathDependencyExclude>
+                                </classpathDependencyExcludes>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
+        <profile>
+            <id>testWithJdk11+</id>
+            <activation>
+                <property>
+                    <name>java-version.test.release</name>
+                    <value>!8</value>
+                </property>
             </activation>
             <properties>
-                <maven.compiler.release>8</maven.compiler.release>
-                <maven.compiler.testRelease>8</maven.compiler.testRelease>
+                <arquillian.wildfly.jvm.args.add-modules>
+                    --add-modules=java.se
+                </arquillian.wildfly.jvm.args.add-modules>
                 <!--
                 All these add-opens are probably not necessary for our WildFly usage but add the ones defined in
                 https://github.com/ctomc/wildfly/commit/d8c4f55a1f900d931c224049c8a118ba4a5bcb45 to be on the safe side.
@@ -1353,50 +1456,6 @@
                     --add-opens=java.management/javax.management.openmbean=ALL-UNNAMED
                     --add-opens=java.naming/javax.naming=ALL-UNNAMED
                 </arquillian.wildfly.jvm.args.add-opens>
-            </properties>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <artifactId>maven-compiler-plugin</artifactId>
-                            <configuration>
-                                <fork>true</fork>
-                            </configuration>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.wildfly.plugins</groupId>
-                            <artifactId>wildfly-maven-plugin</artifactId>
-                            <configuration>
-                                <javaOpts>
-                                    --add-opens=java.base/java.lang=ALL-UNNAMED
-                                    --add-opens=java.base/java.security=ALL-UNNAMED
-                                    --add-opens=java.base/java.io=ALL-UNNAMED
-                                </javaOpts>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
-        <!-- Only run the OSGi tests for JDK < 11 -->
-        <profile>
-            <id>jdk10-</id>
-            <activation>
-                <jdk>(,11)</jdk>
-            </activation>
-            <modules>
-                <module>osgi</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>jdk11+</id>
-            <activation>
-                <jdk>[11,)</jdk>
-            </activation>
-            <properties>
-                <arquillian.wildfly.jvm.args.add-modules>
-                    --add-modules=java.se
-                </arquillian.wildfly.jvm.args.add-modules>
             </properties>
             <build>
                 <pluginManagement>
@@ -1427,9 +1486,12 @@
             </build>
         </profile>
         <profile>
-            <id>jdk18+</id>
+            <id>testWithJdk18</id>
             <activation>
-                <jdk>[18,)</jdk>
+                <property>
+                    <name>java-version.test.release</name>
+                    <value>18</value>
+                </property>
             </activation>
             <properties>
                 <!-- ForbiddenAPIs doesn't work with JDK18+ yet -->
@@ -1439,9 +1501,14 @@
         <profile>
             <id>jdk19+</id>
             <activation>
-                <jdk>[19,)</jdk>
+                <property>
+                    <name>java-version.test.release</name>
+                    <value>19</value>
+                </property>
             </activation>
             <properties>
+                <!-- ForbiddenAPIs doesn't work with JDK19+ yet -->
+                <forbiddenapis.skip>true</forbiddenapis.skip>
                 <!-- We need net.bytebuddy.experimental=true to make Bytebuddy work with JDK19+ -->
                 <surefire.jvm.args.java-version>-Dnet.bytebuddy.experimental=true</surefire.jvm.args.java-version>
             </properties>
